--- a/css/style-reactive.css
+++ b/css/style-reactive.css
@@ -45,29 +45,122 @@
     .menu >li:last-child {
         margin-right: 1%;
     }
+
+    .main .slide li img {
+        position: absolute;
+        z-index: 10;
+        right: 10px;
+        top: 20%;
+        width: 650px;
+    }
+    .main .slide li p#btnScroll {
+        position: absolute;
+        top: 20%;
+        right: 285px;
+        height: 450px;
+    }
+    .main .slide li p#btnScroll:after {
+        content: '';
+        position: inherit;
+        right: 0px;
+        top: 403px;
+        width: 30px;
+        height: 40px;
+        cursor: pointer;
+        z-index: 1001;
+    } 
+    .main .slide li p#btnScroll img {
+        z-index: 1000;
+        height: 100%;
+        width: auto;
+        opacity: 0;
+    }
+    .main .slide li .txt {
+        z-index: 1010;
+    }
+    .main .slide li .txt p {
+        font-size: 43px;
+    }
+    .main .slide li .txt h2 {
+        font-size: 70px;
+    }
+    .main .slide li .txt h2 span {
+        font-size: 70px;
+    }
+    .slick-active .txt h2 span {
+        animation-name: none;
+    }
+
+    .about .title {
+        width: 100%;
+        left: 0px;
+        top: 0px;
+    }
+    .about ul {
+       width: 100%;
+       height: 1500px;
+       margin: 1% auto;
+    }
+    .about ul li {
+       width: 100%;
+       position: relative;
+    }
+    
+    .about ul li:nth-child(1) .txt{
+        left: 7%;
+        top: 80px;
+        width: 550px;
+        height: auto !important;
+    }
+    .about ul li:nth-child(2) .txt{
+        top: 980px;
+    }
+    .about ul li:nth-child(1) .txt:before {
+       left: -62px;
+       width: 80px;
+       height: 80px;
+    }
+    
+    .about ul li:nth-child(1) .img {
+        top: 100px;
+    }
+    .about ul li:nth-child(2) .img {
+        top: 700px;
+    }
+    .about ul li .txt .cursor {
+       right: 23px;
+    }
+    .about ul li:nth-child(2) .txt .cursor {
+       right: 73px;
+    }
+    
+    .skill .title {
+        top: 20px;
+    }
 }
 @media ( max-width: 650px ) {
     .menu {
         position: absolute; 
         right: 0px;
-        width: 80%;
+        width: 86%;
     }
     .menu > li {
-        width: 20%;
-    }
-    .menu >li:first-child {
-        width: 10%;
+        width: auto;
     }
     .menu >li >span {
-        opacity: 1;
+        opacity: 0;
         position: relative;
         top: 6px;
-        font-size: 33px;
+        font-size: 2px;
     }
     .menu >li >a {
-        opacity: 0;
-        font-size: 1px;
+        opacity: 1;
+        font-size: 17px !important;
         margin-right: 0px;
+    }
+    .menu >li:first-child >a {
+        font-size: 1px !important;
+        opacity: 0;
     }
     
     .main {
@@ -110,10 +203,10 @@
         font-size: 23px;
     }
     .main .slide li .txt h2 {
-        font-size: 33px;
+        font-size: 35px;
     }
     .main .slide li .txt h2 span {
-        font-size: 33px;
+        font-size: 35px;
     }
     
     .slick-arrow:after {
@@ -273,6 +366,10 @@
         margin-top: 80px;
         height: 2000px;
     }
+    .skill li {
+        width: 80%;
+        margin-left: -10px;
+    }
     .skill li:nth-child(even) {
        transform: translateX(50px);
     }
@@ -318,13 +415,13 @@
     }
     .project ul li a .content {
        width: 100%;
-       padding: 11px 0px 0px 10%;
+       padding: 11px 0px 0px 6%;
        color: #555;
        font-size: 18px;
     }
     .project ul li a .title {
        width: 100%;
-       padding: 5px 0 2px 12%;
+       padding: 5px 0 2px 7%;
        font-style: normal;
        font-weight: 1000;
        font-size: 23px;
@@ -343,11 +440,18 @@
     .project ul li a .cursor::before {
         transform: rotate(270deg) !important;
     }
+    
+    .contact ul li p span {
+        font-size: 25px;
+    }
+    .contact ul li p a {
+        font-size: 22px;
+    }
 }
 @media ( max-width: 450px ) {
     header .innerHeader {
         height: 100px;
-        padding: 0 15px;
+        padding: 0 10px;
         transition: all 0.5s;
     }
     .menu {
@@ -366,7 +470,7 @@
     }
     .menu >li >a {
         opacity: 1;
-        font-size: 16px !important;
+        font-size: 15px !important;
         margin-right: 0px;
     }
     .menu >li:first-child >a {
@@ -388,7 +492,7 @@
     .main .slide li .txt {
         position: absolute;
         top: auto;
-        bottom: 10%;
+        bottom: 5%;
     }
     .main .slide li .txt p {
         font-size: 17px;
@@ -504,6 +608,15 @@
         top: 80px;
         font-size: 49px;
         transform: rotate(0deg);
+     }
+     .about ul li .txt .cursor.click {
+        animation: click linear 0.3s 1;
+        transform: translateX(-10px) translateY(-2px) rotate(-80deg);
+        transition: all 0.3s;
+     }
+     @keyframes click {
+        0% { transform: translateX(0px) rotate(-80deg); }
+        100% { transform: translateX(-10px) translateY(-2px) rotate(-80deg); }
      }
 
      .skill ul:before {
