feat: Add Experience to about section

--- a/css/style.css
+++ b/css/style.css
@@ -369,7 +369,7 @@ section .title p {
 .main .hits {
    position: absolute;
    right: 20px;
-   bottom: 30px;
+   bottom: 3vh;
 }
 
 /* about */ 
@@ -387,7 +387,7 @@ section .title p {
    /* background: #ffbbe0; */
    /* font-weight: 600; */
    width: 1100px;
-   height: 1100px;
+   height: 1800px;
    margin: 1% auto;
    /* border: #555 1px solid; */
    /* overflow: hidden; */
@@ -683,6 +683,99 @@ section .title p {
    transition: all 0.3s;
    transform: translateX(-1%) translateY(-1%);
 } */
+.about ul li.experience {
+   font-size: 22px;
+   padding: 15px 22px 22px 22px;
+   background: #FFF;
+   line-height: 38px;
+   cursor: default;
+}
+.about ul li.experience h3{
+   font-size: 24px;
+   margin-left: 3px;
+}
+.about ul li.experience span {
+   font-size: 17px;
+   margin-left: 10px;
+   color: #555
+}
+.about ul li.career{
+   position: relative;
+   left: 50px;
+   top: 1360px;
+   width: 470px;
+   height: auto;
+   border: 2px solid #7adfca;
+   box-shadow: 10px 10px 0px #A4E4D8;
+}
+.about ul li.career:before {
+   content: '';
+   position: absolute;
+   left: -80px;
+   top: -65px;
+   width: 120px;
+   height: 120px;
+   background: url(../img/text_wink.png) center/cover;
+   transform: rotate(0deg);
+   cursor: pointer;
+}
+.about ul li.career:hover:before {
+   animation: star linear 0.5s 2;
+}
+@keyframes star {
+   0% { transform: rotate(0deg); }
+   50% { transform: rotate(40deg) scale(0.9); }
+   100% { transform: rotate(0deg); }
+}
+.about ul li.career div {
+   transform: translateX(-5px);
+   line-height: 30px;
+   margin: 6px auto;
+}
+.about ul li.career div i {
+   color: #ff5492;
+}
+.about ul li.career div span {
+   color: rgb(34, 34, 34);
+}
+
+.about ul li.education{
+   border: 2px solid #ffbbe0;
+   position: relative;
+   left: 450px;
+   top: 930px;
+   width: 530px;
+   height: auto;
+   box-shadow: 10px 10px 0px #FFD8ED;
+}
+.about ul li.education:before {
+   content: '';
+   position: absolute;
+   right: -10px;
+   top: -35px;
+   width: 90px;
+   height: 90px;
+   background: url(../img/text_heart.png) center/cover;
+   transform: rotate(0deg);
+   cursor: pointer;
+}
+.about ul li.education:hover:before {
+   animation: heart linear 0.5s 2;
+}
+@keyframes heart {
+   0% { transform: translateY(0px) rotate(0deg); }
+   50% { transform: translateY(-20px) rotate(5deg); }
+   100% { transform: translateY(0px) rotate(0deg); }
+}
+.about ul li.certificate{
+   border: 2px solid #ffbbe0;
+   position: relative;
+   left: 550px;
+   top: 1050px;
+   width: 300px;
+   height: auto;
+   box-shadow: 10px 10px 0px #FFD8ED;
+}
 
 
 /* 타이틀 버블 효과 */
