--- a/css/style-reactive.css
+++ b/css/style-reactive.css
@@ -166,7 +166,7 @@
     }
     .about ul {
        width: 100%;
-       height: 1500px;
+       height: 2000px;
        margin: 1% auto;
     }
     .about ul li {
@@ -201,6 +201,25 @@
     .about ul li:nth-child(2) .txt .cursor {
        right: 73px;
     }
+    .about ul li.career {
+        left: 60px;
+        transform: translateY(290px);
+     }
+    .about ul li.career:before {
+       left: -50px;
+        width: 100px;
+        height: 100px;
+    }
+    .about ul li.education {
+        position: relative;
+        left: 40%;
+        transform: translateY(230px);
+     }
+     .about ul li.certificate {
+         position: relative;
+         left: 60%;
+         transform: translateY(270px);
+      }
     
     .skill .title {
         top: 20px;
@@ -208,11 +227,11 @@
     }
     .skill ul:before {
         width: 90%;
-        height: 1745px;
+        height: 1645px;
     }
     .skill ul {
         width: 90%;
-        height: 1700px;
+        height: 1600px;
     }
     .skill li {
         width: 50%;
@@ -244,6 +263,10 @@
      .project ul li a .content {
         font-size: 15px;
      }
+
+     .contact ul li:nth-child(2) {
+         transform: translateX(80px);
+     }
 }
 @media ( max-width: 730px ) {
     .menu {
@@ -261,7 +284,7 @@
     .menu >li >a {
         opacity: 1;
         margin-right: 0px;
-        font-size: 18px;
+        font-size: 22px;
     }
     
     .main {
@@ -331,7 +354,7 @@
     }
     .about ul {
        width: 100%;
-       height: 1300px;
+       height: 1900px;
        margin: 1% auto;
     }
     .about ul li {
@@ -439,6 +462,24 @@
        font-size: 49px;
        transform: rotate(0deg);
     }
+    .about ul li.career {
+        left: 60px;
+        transform: translateY(290px);
+     }
+    .about ul li.education {
+        position: relative;
+        left: 30%;
+        width: 510px;
+        transform: translateY(230px);
+     }
+    .about ul li.education:before {
+        right: 50px;
+    }
+     .about ul li.certificate {
+         position: relative;
+         left: 50%;
+         transform: translateY(380px);
+      }
 
     
     .skill .title {
@@ -453,7 +494,7 @@
         margin: 0 auto;
         top: 150px;
         width: 90%;
-        height: 1815px;
+        height: 1615px;
         z-index: -1;
         background: #ffbbe0;
         /* background: #1abc9c; */
@@ -465,7 +506,7 @@
         margin: 1% auto;
         overflow: hidden;
         margin-top: 80px;
-        height: 1800px;
+        height: 1600px;
     }
     .skill li {
         width: 80%;
@@ -492,7 +533,7 @@
         width: 100%;
         margin: 5% auto;
         overflow: hidden;
-        height: 2200px;
+        height: 2300px;
         padding-top: 190px;
         padding-left: 0;
     }
@@ -504,6 +545,7 @@
        border-radius: 5px;
        height: 310px;
        padding-top: 20px;
+       margin-bottom: 50px !important;
        box-shadow: 7px 7px 0px #1abc9c65;
        /* background: #dbdbdb2d; */
     }
@@ -567,7 +609,7 @@
     }
     .menu >li >a {
         opacity: 1;
-        font-size: 14px !important;
+        font-size: 16px !important;
         margin-right: 0px;
     }
     /* .menu >li:first-child >a {
@@ -609,7 +651,7 @@
     }
     .about ul {
         width: 100%;
-        height: 1300px;
+        height: 1800px;
         margin: 1% auto;
      }
      .about ul li .txt {
@@ -715,18 +757,56 @@
         0% { transform: translateX(0px) rotate(-80deg); }
         100% { transform: translateX(-10px) translateY(-2px) rotate(-80deg); }
      }
+     .about ul li.experience {
+        font-size: 18px;
+        padding: 10 10 20 10;
+        line-height: 32px;
+    }
+    .about ul li.experience h3 {
+        transform: translateY(-5px);
+    }
+    .about ul li.experience span {
+        font-size: 15px;
+    }
+    .about ul li.career {
+        left: 20px;
+        transform: translateY(50px);
+        width: 380px;
+     }
+    .about ul li.career:before {
+       left: -30px;
+       top: -50px;
+        width: 70px;
+        height: 70px;
+    }
+    .about ul li.education {
+        position: relative;
+        left: 10%;
+        width: 430px;
+        transform: translateY(-40px);
+     }
+     .about ul li.education:before {
+         right: 25px;
+         top: -55px;
+     }
+     .about ul li.certificate {
+         position: relative;
+         left: 40%;
+         width: 230px;
+         transform: translateY(170px);
+      }
 
      .skill ul:before {
-        height: 1715px;
+        height: 1615px;
     }
     .skill ul {
-        height: 1700px;
+        height: 1600px;
     }
     .skill li {
         font-size: 18px;
         width: 80%;
         margin-left: -10px;
-        margin-bottom: 30px;
+        margin-bottom: 40px;
     }
     
     .project ul {
@@ -838,6 +918,29 @@
     }
 }
 @media ( max-width: 400px ) {
+    header .innerHeader {
+        height: 50px;
+    }
+    .innerHeader .logo {
+        height: 50px;
+    }
+    .innerHeader .logo a img {
+       width: 50%;
+       top: -8px;
+    }
+    header .innerHeader .menu > li {
+        height: 50px;
+        line-height: 50px;
+    }
+    header.on .innerHeader {
+        height: 40px;
+        transition: all 0.3s;
+        background: #dbdbdbef;
+    }
+    header.on .innerHeader .menu > li {
+       height: 40px;
+       line-height: 40px;
+    }
     .menu {
         left: 10%;
     }
@@ -849,7 +952,7 @@
     }
     .menu >li >a {
         opacity: 1;
-        font-size: 12px !important;
+        font-size: 12.8px !important;
         margin-right: 0px;
     }
     .main .slide li .txt p {
@@ -876,16 +979,16 @@
     }
     
      .skill ul:before {
-        height: 1665px;
+        height: 1565px;
     }
     .skill ul {
-        height: 1600px;
+        height: 1500px;
     }
     .skill li {
         font-size: 18px;
         width: 80%;
         margin-left: -10px;
-        margin-bottom: 25px;
+        margin-bottom: 35px;
         overflow: hidden;
     }
     
