--- a/css/style.css
+++ b/css/style.css
@@ -807,7 +807,7 @@ section .title p {
    margin: 0 auto;
    top: 150px;
    width: 1000px;
-   height: 1215px;
+   height: 1115px;
    z-index: -1;
    background: #ffbbe0;
    /* background: #1abc9c; */
@@ -817,8 +817,9 @@ section .title p {
 .skill ul {
    width: 1000px;
    margin: 1% auto;
+   padding-top: 20px;
    overflow: hidden;
-   height: 1200px;
+   height: 1100px;
 }
 .skill li {
    cursor: default;
@@ -1290,6 +1291,9 @@ section.contact .title {
 }
 .contact ul li:first-child p:hover:after{
    width: 198px;
+}
+.contact ul li:nth-child(2) {
+    transform: translateX(80px);
 }
 @keyframes pitapat {
    0% { transform: translateX(30px) translateY(20px) rotate(0deg); }
