--- a/vue-portfolio/public/css/style.css
+++ b/vue-portfolio/public/css/style.css
@@ -217,16 +217,17 @@ header.on .menu ul.inner.on {
   margin-bottom: 300px;
 }
 .main .slide ul {
-  width: 1200px;
+  width: 100%;
 }
 .main .slide li {
-  width: 1200px;
+  width: 100%;
   height: 98vh;
   position: relative;
-  background: #ffbbe0;
+  background-color: #ffbbe0;
+  transition: background-color 0.2s ease-in-out;
 }
-.main .slide li:nth-child(2) {
-  background: #ffc6e6;
+.main .slide li#light-background {
+  background-color: #ffc6e6;
 }
 .main .slide li img {
   background: none;
@@ -235,6 +236,8 @@ header.on .menu ul.inner.on {
   bottom: 3%;
   width: 50%;
   height: auto;
+  animation-name: img;
+  animation-duration: 2s;
 }
 .main .slide li p#btnScroll:after {
   content: "";
@@ -252,6 +255,7 @@ header.on .menu ul.inner.on {
   width: 2.5%;
   height: auto;
   opacity: 0;
+  animation: scroll linear 0.8s 1.9s infinite;
 }
 .main .slide li .txt {
   position: absolute;
@@ -265,18 +269,10 @@ header.on .menu ul.inner.on {
   text-transform: uppercase;
   transition: all 0.3s;
 }
-/* .main .slide li .txt:before {
-   z-index: -1;
-   content: '';
-   position: absolute;
-   left: -25%;
-   top: 15%;
-   width: 128%;
-   height: 35vh;
-   background: #ff9ed3;
-} */
 .main .slide li .txt p {
   margin-bottom: 5px;
+  animation-name: txt1;
+  animation-duration: 0.8s;
 }
 .main .slide li .txt h2 {
   /* font-weight: 500;
@@ -285,6 +281,8 @@ header.on .menu ul.inner.on {
   font-weight: 500;
   font-size: 7.5vh;
   letter-spacing: 5%;
+  animation-name: txt3;
+  animation-duration: 0.8s;
 }
 .main .slide li .txt h2 span {
   font-weight: 700;
@@ -292,54 +290,35 @@ header.on .menu ul.inner.on {
   font-size: 8vh;
   color: #ff5492;
   /* color: #1abc9cb4; */
+  animation-name: txt4;
+  animation-duration: 1s;
 }
-/* .main .slide li .txt h2 span:hover,
-.main .slide li .txt h2 span:focus {
-   transition: all 0.3s;
-} */
 
-/* slick */
-.slick-arrow {
+.main .arrow {
   position: absolute;
-  top: 50%;
-  z-index: 1;
-  width: 60px;
-  height: 60px;
-  line-height: 60px;
-  border: none;
-  text-indent: -9999px;
+  top: 45%;
   background: none;
+  border: none;
+  cursor: pointer;
 }
-.slick-arrow:after {
-  content: "<";
-  font-family: "Rubik", sans-serif;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  color: #fff;
-  font-size: 80px;
+.main .arrow:nth-child(1) {
   left: 0;
-  top: 0;
-  text-indent: 0px;
-  transition: all 0.3s;
 }
-.slick-next {
-  right: 1px;
-  text-align: left;
+.main .arrow:nth-child(2) {
+  right: 0;
 }
-.slick-next:after {
-  content: ">";
-  left: 10px;
+.main .arrow i {
+  font-size: 65px;
+  color: white;
+  transition: color 0.2s ease-in-out;
 }
-
-/* 화살표 hover */
-.slick-arrow:hover:after {
-  transition: all 0.3s;
+.main .arrow:hover i {
   color: #1abc9c;
+  transition: color 0.2s ease-in-out;
 }
 
 /* 게이지 */
-.main .slick-active:after {
+.main .slide li:after {
   content: "";
   width: 100%;
   height: 5px;
@@ -360,10 +339,6 @@ header.on .menu ul.inner.on {
 }
 
 /* main 애니메이션 */
-.slick-active .txt p {
-  animation-name: txt1;
-  animation-duration: 0.8s;
-}
 @keyframes txt1 {
   0% {
     opacity: 0;
@@ -378,20 +353,6 @@ header.on .menu ul.inner.on {
     transform: rotateX(0deg) translateY(0px);
   }
 }
-
-/* .slick-active .txt a {
-   animation-name: txt2;
-   animation-duration: 0.8s;
-}
-@keyframes txt2 {
-   0% {opacity: 0; transform: rotateX(180deg) translateY(+150px);}
-   20% {opacity: 0; transform: rotateX(180deg) translateY(+150px);}
-   100% {opacity: 1; transform: rotateX(0deg) translateY(0px);}
-} */
-.slick-active .txt h2 {
-  animation-name: txt3;
-  animation-duration: 0.8s;
-}
 @keyframes txt3 {
   0% {
     transform: translateX(0);
@@ -403,10 +364,6 @@ header.on .menu ul.inner.on {
     transform: translateX(0);
   }
 }
-.slick-active .txt h2 span {
-  animation-name: txt4;
-  animation-duration: 1s;
-}
 @keyframes txt4 {
   0% {
     font-size: 7.5vh;
@@ -417,10 +374,6 @@ header.on .menu ul.inner.on {
   100% {
     font-size: 8vh;
   }
-}
-.slick-active img {
-  animation-name: img;
-  animation-duration: 2s;
 }
 @keyframes img {
   0% {
@@ -435,9 +388,6 @@ header.on .menu ul.inner.on {
     opacity: 1;
     transform: translateX(0px);
   }
-}
-.slick-active p#btnScroll img {
-  animation: scroll linear 0.8s 1.9s infinite;
 }
 @keyframes scroll {
   0% {
