--- a/vue-portfolio/public/css/style.css
+++ b/vue-portfolio/public/css/style.css
@@ -216,30 +216,31 @@ header.on .menu ul.inner.on {
 .main {
   margin-bottom: 300px;
 }
-.main .slide ul {
+.main .slide .main-slide {
   width: 100%;
 }
-.main .slide li {
+.main .slide .main-slide {
   width: 100%;
   height: 98vh;
   position: relative;
   background-color: #ffbbe0;
   transition: background-color 0.2s ease-in-out;
 }
-.main .slide li#light-background {
+.main .slide .main-slide#light-background {
   background-color: #ffc6e6;
 }
-.main .slide li img {
+.main .slide .main-slide img {
   background: none;
   position: absolute;
   right: 7%;
   bottom: 3%;
   width: 50%;
   height: auto;
+  z-index: 100;
   animation-name: img;
   animation-duration: 2s;
 }
-.main .slide li p#btnScroll:after {
+.main .slide .main-slide p#btnScroll:after {
   content: "";
   position: absolute;
   right: 27%;
@@ -248,7 +249,7 @@ header.on .menu ul.inner.on {
   height: 30%;
   cursor: pointer;
 }
-.main .slide li p#btnScroll img {
+.main .slide .main-slide p#btnScroll img {
   position: absolute;
   right: 27.5%;
   bottom: 3%;
@@ -257,7 +258,7 @@ header.on .menu ul.inner.on {
   opacity: 0;
   animation: scroll linear 0.8s 1.9s infinite;
 }
-.main .slide li .txt {
+.main .slide .main-slide .txt {
   position: absolute;
   left: 13%;
   top: 65%;
@@ -269,12 +270,12 @@ header.on .menu ul.inner.on {
   text-transform: uppercase;
   transition: all 0.3s;
 }
-.main .slide li .txt p {
+.main .slide .main-slide .txt p {
   margin-bottom: 5px;
   animation-name: txt1;
   animation-duration: 0.8s;
 }
-.main .slide li .txt h2 {
+.main .slide .main-slide .txt h2 {
   /* font-weight: 500;
    font-size: 14vh;
    font-family: 'Nanum Pen Script', cursive; */
@@ -284,7 +285,7 @@ header.on .menu ul.inner.on {
   animation-name: txt3;
   animation-duration: 0.8s;
 }
-.main .slide li .txt h2 span {
+.main .slide .main-slide .txt h2 span {
   font-weight: 700;
   /* font-size: 18vh; */
   font-size: 8vh;
@@ -318,7 +319,7 @@ header.on .menu ul.inner.on {
 }
 
 /* 게이지 */
-.main .slide li:after {
+.main .slide > div:after {
   content: "";
   width: 0%;
   height: 5px;
