feat: Update slide

--- a/vue-portfolio/public/css/style.css
+++ b/vue-portfolio/public/css/style.css
@@ -218,15 +218,12 @@ header.on .menu ul.inner.on {
 }
 .main .slide .main-slide {
   width: 100%;
-}
-.main .slide .main-slide {
-  width: 100%;
   height: 98vh;
   position: relative;
   background-color: #ffbbe0;
   transition: background-color 0.2s ease-in-out;
 }
-.main .slide .main-slide#light-background {
+.main .slide .main-slide.light-background {
   background-color: #ffc6e6;
 }
 .main .slide .main-slide img {
@@ -264,35 +261,27 @@ header.on .menu ul.inner.on {
   top: 65%;
   color: #fff;
   /* color: #000; */
-  font-size: 3vh;
   transform: translateY(-50%);
   font-weight: 500;
   text-transform: uppercase;
   transition: all 0.3s;
 }
 .main .slide .main-slide .txt p {
+  font-size: 20px;
   margin-bottom: 5px;
   animation-name: txt1;
   animation-duration: 0.8s;
 }
 .main .slide .main-slide .txt h2 {
-  /* font-weight: 500;
-   font-size: 14vh;
-   font-family: 'Nanum Pen Script', cursive; */
-  font-weight: 500;
-  font-size: 7.5vh;
+  font-size: 45px;
   letter-spacing: 5%;
   animation-name: txt3;
   animation-duration: 0.8s;
 }
 .main .slide .main-slide .txt h2 span {
   font-weight: 700;
-  /* font-size: 18vh; */
-  font-size: 8vh;
+  font-size: 47px;
   color: #ff5492;
-  /* color: #1abc9cb4; */
-  animation-name: txt4;
-  animation-duration: 1s;
 }
 
 .main .arrow {
@@ -367,13 +356,13 @@ header.on .menu ul.inner.on {
 }
 @keyframes txt4 {
   0% {
-    font-size: 7.5vh;
+    font-size: 45px;
   }
   20% {
-    font-size: 7.5vh;
+    font-size: 45px;
   }
   100% {
-    font-size: 8vh;
+    font-size: 47px;
   }
 }
 @keyframes img {
