--- a/vue-portfolio/public/css/style.css
+++ b/vue-portfolio/public/css/style.css
@@ -242,27 +242,20 @@ header.on .menu ul.inner.on {
 }
 .main .slide .main-slide .image button {
   position: absolute;
-  right: 7%;
-  bottom: 20%;
-  width: 50%;
-}
-.main .slide .main-slide #button-scroll:after {
-  content: "";
-  position: absolute;
   right: 27%;
   bottom: 3%;
-  width: 10%;
-  height: 30%;
+  height: 50vw;
+  background: none;
+  border: none;
+  font-size: 3vw;
   cursor: pointer;
-}
-.main .slide .main-slide #button-scroll img {
-  position: absolute;
-  right: 27.5%;
-  bottom: 3%;
-  width: 2.5%;
-  height: auto;
   opacity: 0;
-  animation: scroll linear 0.8s 1.9s infinite;
+  animation: scroll linear 0.6s 1.9s infinite;
+}
+.main .slide .main-slide .image button i {
+  position: relative;
+  top: 28%;
+  color: white;
 }
 .main .slide .main-slide .txt {
   position: absolute;
@@ -391,15 +384,15 @@ header.on .menu ul.inner.on {
 @keyframes scroll {
   0% {
     opacity: 1;
-    transform: translateY(0px);
+    transform: translateY(0);
   }
   50% {
     opacity: 1;
-    transform: translateY(-10px);
+    transform: translateY(-2%);
   }
   100% {
     opacity: 1;
-    transform: translateY(0px);
+    transform: translateY(0);
   }
 }
 
