feat: Update style

--- a/vue-portfolio/public/css/style.css
+++ b/vue-portfolio/public/css/style.css
@@ -223,7 +223,7 @@ header.on .menu ul.inner.on {
   background-color: #ffbbe0;
   transition: background-color 0.2s ease-in-out;
 }
-.main .slide .main-slide.light {
+.main .slide .main-slide.bright {
   background-color: #ffc6e6;
 }
 .main .slide .main-slide .image {
